--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "build-release": "cargo +nightly build --release --target wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/release/chip8.wasm --out-dir ."
   },
   "devDependencies": {
+    "ts-loader": "^4.4.2",
+    "typescript": "^2.9.2",
     "webpack": "^4.16.0",
     "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.4"
