--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
+cargo-features = ["edition"]
+
 [package]
 name = "chip8"
 version = "0.1.0"
 authors = ["picklenerd <jordan.t.grace@gmail.com>"]
+edition = '2018'
 
 [lib]
 crate-type = ["cdylib"]
