--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
-cargo-features = ["edition"]
+#cargo-features = ["edition"]
 
 [package]
 name = "chip8"
 version = "0.1.0"
 authors = ["picklenerd <jordan.t.grace@gmail.com>"]
-edition = '2018'
+#edition = '2018'
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2"
+wasm-bindgen = "0.2.13"
