Attempting to get cpu running asynchronously

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -3,9 +3,9 @@
     "outDir": "./js",
     "noImplicitAny": true,
     "module": "es6",
-    "target": "es5",
+    "target": "es6",
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
   },
   "include": [
     "src"
