--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
     "typescript": "^2.9.2",
     "webpack": "^4.16.0",
     "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "worker-loader": "^2.0.0"
   },
   "dependencies": {
     "pixi.js": "^4.8.1"
